filebrowser: remove container prefix